- Correct the index number when calling _RemoveSmallDat() with an index.   This may be masking out a different bug. - This fixes part of bug #2614. It may even fix all of it but I have to   test.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27180 a95241bf-73f2-0310-859d-f6bbb57e9c96